--- a/projects/ravi-lms/src/app/Courses/footer/footer.component.css
+++ b/projects/ravi-lms/src/app/Courses/footer/footer.component.css
@@ -124,7 +124,7 @@
 } 
 
 .simple-footer {
-  background: linear-gradient(135deg, #1c1c1e, #2c2c2e);
+  background: linear-gradient(135deg, #262628, #232324);
   color: #ddd;
   font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
   text-align: center;
