--- a/projects/ravi-lms/src/app/Courses/footer/footer.component.html
+++ b/projects/ravi-lms/src/app/Courses/footer/footer.component.html
@@ -1,7 +1,34 @@
-<footer class="footer">
+<!-- <footer class="footer"> -->
   
 
-  <div class="footer-links">
+
+  <footer class="footer" style="text-align: center; padding: 20px; background-color: #1c1c1e;">
+    <div style="margin-bottom: 10px;">
+      &copy; 2025 RHS. All rights reserved.
+      |
+      <a href="#">Privacy Policy</a>
+      |
+      <a href="#">Terms of Service</a>
+    </div>
+    <div>
+      <a href="https://www.instagram.com/" class="nav-link" target="_blank" style="margin: 0 10px;">
+        <i class="fab fa-instagram" style="font-size: 24px; color: #E1306C;"></i>
+      </a>
+      <a href="https://www.facebook.com/" class="nav-link" target="_blank" style="margin: 0 10px;">
+        <i class="fab fa-facebook" style="font-size: 24px; color: #1877F2;"></i>
+      </a>
+      <a href="https://x.com/" class="nav-link" target="_blank" style="margin: 0 10px;">
+        <i class="fab fa-x-twitter" style="font-size: 24px; color: #d1c6c6;"></i>
+      </a>
+    </div>
+  </footer>
+
+
+
+
+  
+
+  <!-- <div class="footer-links">
     <div class="footer-column">
       <h3>Top Tutorials</h3>
       <ul>
@@ -65,7 +92,7 @@
         <li><a href="#">XML Certificate</a></li>
       </ul>
     </div>
-  </div>
+  </div> -->
 
   <!-- <div class="footer-top">
     <div class="footer-info">
@@ -93,7 +120,7 @@
     </div>
   </div> -->
 
-
+<!-- 
    <div class="footer-content">
     <p>&copy; 2025 RHS. All rights reserved.</p>
     <div class="footer-social">
@@ -107,7 +134,7 @@
         <i class="fab fa-twitter"></i>
       </a>
     </div>
-  </div>
+  </div> -->
   <!-- <div class="footer-bottom">
     <p>FORUM | ABOUT | ACADEMY</p>
   </div>
