--- a/projects/ravi-lms/src/app/Dashboard/admin-dashboard/admin-dashboard.component.css
+++ b/projects/ravi-lms/src/app/Dashboard/admin-dashboard/admin-dashboard.component.css
@@ -168,6 +168,13 @@ body {
   margin-bottom: 2.5rem;
 }
 
+.data-section h2 {
+  font-size: 1.5rem;
+  margin-bottom: 1rem;
+  color: #09d75e;
+  font-weight: 700;
+}
+
 .card {
   background: #f5e9e9;
   border-radius: 16px;
